--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,6 @@ filelock==3.16.1
 fiona==1.10.1
 folium==0.18.0
 fonttools==4.54.1
-GDAL==3.6.2
 gdown==5.2.0
 geojson==3.1.0
 geopandas==1.0.1
@@ -114,3 +113,4 @@ whitebox==2.3.5
 whiteboxgui==2.3.0
 widgetsnbextension==4.0.13
 xyzservices==2024.9.0
+pygdal==3.6.2.*
