--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,6 @@ services:
       context: .
       dockerfile: Dockerfile
     env_file: .env
+    ports:
+      - 8501:8501
     #command: streamlit run app.py --server.port 8501
